--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 
     <dependencies>
         <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId> <artifactId>jooq</artifactId> <version>3.17.4</version>
+        </dependency>
+        <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
